# cpp-dll-security-lab

./: .gitignore  CMakeLists.txt  README.md  dll_events_monitor.ps1  dll_switch.bat  dll_switch.ps1  malicious_matematik.c
git-scripts/: run_plantuml_latex.bat
istemciler/: explicit_dll_loader.cpp  main.cpp  main_static.cpp
istemciler/CSharpClient/: CSharpClient.csproj  Program.cs
istemciler/CSharpExplicitLoader/: Program.cs
kotu-amacli/: malicious_matematik.c
simulasyonlar/: dll_events_monitor.ps1  dll_switch.bat  dll_switch.ps1
src/: matematik.c  matematik.h
